Revert css, try to fix side nav overlapping (using z-index)

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ ul#nav {
   width: 140px;
   position: fixed;
   border-radius: 0;
-  height: 80%;
+  height: 100%;
 }
 
 .navbar-fixed-left .navbar-nav > li {
@@ -87,14 +87,14 @@ body {
   min-height: 100%;
   height: auto;
   /* Negative indent footer by its height */
-  margin: 0 auto -20%;
+  margin: 0 auto -40px;
   /* Pad bottom by footer height */
-  padding: 0 0 20%;
+  padding: 0 0 40px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 20%;
+  height: 40px;
   background-color: #f5f5f5;
 }
 
